reprise texte dos du livre

--- a/index.html
+++ b/index.html
@@ -30,24 +30,50 @@
           Gervy publié en 2021.
         </p>
         <h1 style="margin-top: 2rem; margin-bottom: 0">Présentation</h1>
+
         <p>
-          Vous avez oublié la traduction d'un mot français en wallon ? Vous êtes
-          ici à la bonne adresse.
+          Selon l’Unesco, une langue devient véritablement « en danger » quand
+          elle n’est plus enseignée par les parents, à la maison, comme langue «
+          maternelle ». Une langue est dite « moribonde » quand elle n’est plus
+          parlée que par une poignée de locuteurs très âgés, ce qui est le cas
+          de notre wallon. Sauvons-le ! <em lang="wln-BE">Sauvone-lè !</em>
         </p>
         <p>
-          Après le dictionnaire « Wallon – Français » pour Ittre, Haut-Ittre et
-          Virginal, voici son miroir « Français – Wallon » qui vous permettra de
-          retrouver un mot wallon oublié ou devenu imprécis
+          Moribond !? <em lang="wln-BE">Mins coumint ç-qu’on dit</em> « il est
+          moribond » <em lang="wln-BE">in walon</em> ?
+          <em lang="wln-BE"
+            >Hè bî, on dit : il est prèsse à mori, il a d’djà d’èl têre dins sès
+            poches, ès’ cu sint l’èscoupe</em
+          >
+          (la bêche du fossoyeur),
+          <em lang="wln-BE"
+            >il èsst’ al dèrnière…, yè co d’ z-autes èsprèssions qu’ vos
+            trouvrez dins ‘s dicsionère-ci.</em
+          >
         </p>
         <p>
-          Ce site est le fruit du travail presté depuis l'an 2000 par Jean-Marie
-          Gervy et les <a href="./remerciements.html">Vîs Paltots</a> de notre
-          entité villageoise. Ces passionnés n'ont pas de formation littéraire
-          mais leur enthousiasme pallie leurs éventuelles carences
-          linguistiques.
-          <em lang="wln-BE">Astone, dalone ?</em>
-          <em lang="wln-BE">Atakone !</em>
+          Voilà 20 ans que Jean-Marie Gervy et les
+          <a href="./remerciements.html">Vîs Paltots</a>, derniers locuteurs
+          wallons de l’entité ittroise, travaillent à sauvegarder le parler
+          wallo-picard local. Cet ouvrage fait suite au dictionnaire Wallon -
+          Français déjà paru et vous aidera à retrouver un mot wallon oublié,
+          voire ignoré. Nos passionnés vont vous faire partager leur
+          enthousiasme, <em lang="wln-BE">pèrcés sots du walon qu’is sont !</em>
         </p>
+        <p>
+          <em lang="wln-BE"
+            >Atakone ? Lanciz-vous !, vos ârez branmin d’ pléji à rtrouver
+            sacans rvazis<a
+              href="#fn0"
+              class="footnote-ref"
+              id="fnref0"
+              role="doc-noteref"
+              ><sup>1</sup></a
+            >
+            qu’ont branmin pus d’ goût in walon qu’in francès.</em
+          >
+        </p>
+
         <h1 style="margin-top: 2rem; margin-bottom: 0">Sommaire</h1>
         <nav class="home-nav">
           <a href="./préface.html">Préface</a>
@@ -114,5 +140,26 @@
         </div>
       </div>
     </main>
+    <section
+      id="footnotes"
+      class="footnotes footnotes-end-of-document"
+      role="doc-endnotes"
+    >
+      <div class="container">
+        <ol>
+          <li id="fn0">
+            <p>
+              <em lang="wln-BE">Rvazi</em> : axiome, proverbe, dicton,
+              sentence..<a
+                href="#fnref0"
+                class="footnote-back"
+                role="doc-backlink"
+                >↩︎</a
+              >
+            </p>
+          </li>
+        </ol>
+      </div>
+    </section>
   </body>
 </html>
