--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
     <main>
       <div class="container">
         <p>
-          Ceci est la conversion en site web du livre
-          <em lang="wln-BE">Dictionnaire Français-Wallon</em> de Jean-Marie
-          Gervy publié en 2021.
+          Ceci est la conversion en site web du livre "Dictionnaire
+          Français-Wallon" de Jean-Marie Gervy publié en 2021.
         </p>
         <h1 style="margin-top: 2rem; margin-bottom: 0">Présentation</h1>
 
