--- a/index.html
+++ b/index.html
@@ -24,10 +24,6 @@
     </header>
     <main>
       <div class="container">
-        <p>
-          Ceci est la conversion en site web du livre "Dictionnaire
-          Français-Wallon" de Jean-Marie Gervy publié en 2021.
-        </p>
         <h1 style="margin-top: 2rem; margin-bottom: 0">Présentation</h1>
 
         <p>
@@ -135,7 +131,10 @@
         </p>
         <div class="copyright">
           Copyright Jean-Marie Gervy, Belgique, 2021.<br />
-          Tous droits de traduction, d'adaptation et de reproduction interdits.
+          Tous droits de traduction, d'adaptation et de reproduction interdits.<br />
+          Converti en site web par Emmanuel Gervy en 2025.
+        </p>
+
         </div>
       </div>
     </main>
