--- a/index.html
+++ b/index.html
@@ -131,10 +131,9 @@
         </p>
         <div class="copyright">
           Copyright Jean-Marie Gervy, Belgique, 2021.<br />
-          Tous droits de traduction, d'adaptation et de reproduction interdits.<br />
-          Converti en site web par Emmanuel Gervy en 2025.
-        </p>
-
+          Tous droits de traduction, d'adaptation et de reproduction
+          interdits.<br />
+          Livre converti en site web par Emmanuel Gervy en 2025.
         </div>
       </div>
     </main>
