--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             >Mais comment lire le wallon ?</a
           >
           <a href="./abréviations.html">Abréviations</a>
-          <a href="./A.html"><strong>Dictionnaire</strong></a>
+          <a href="./A.html">Dictionnaire</a>
           <a href="./grammaire.html">Grammaire wallonne pour Ittre</a>
           <a href="./conjugaisons.html">Conjugaison</a>
           <a href="./liste-des-bourgmestres.html"
