--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
           <li id="fn0">
             <p>
               <em lang="wln-BE">Rvazi</em> : axiome, proverbe, dicton,
-              sentence..<a
+              sentence.<a
                 href="#fnref0"
                 class="footnote-back"
                 role="doc-backlink"
