text change and css change

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         </p>
         <p>
           <em lang="wln-BE"
-            >Atakone ? Lanciz-vous !, vos ârez branmin d’ pléji à rtrouver
-            sacans rvazis<a
+            >Atakone ? Alez, hue !, d'aboûrd !, vos ârez branmin d’ pléji à
+            rtrouver sacans rvazis<a
               href="#fn0"
               class="footnote-ref"
               id="fnref0"
@@ -71,33 +71,59 @@
 
         <h1 style="margin-top: 2rem; margin-bottom: 0">Sommaire</h1>
         <nav class="home-nav">
-          <a href="./préface.html">Préface</a>
-          <a href="./comment-lire-le-wallon.html"
-            >Mais comment lire le wallon ?</a
-          >
-          <a href="./abréviations.html">Abréviations</a>
-          <a href="./A.html">Dictionnaire</a>
-          <a href="./grammaire.html">Grammaire wallonne pour Ittre</a>
-          <a href="./conjugaisons.html">Conjugaison</a>
-          <a href="./liste-des-bourgmestres.html"
-            >Liste des bourgmestres de nos 3 villages connus depuis la fin du
-            19<sup>ème</sup> siècle</a
-          >
-          <a href="./liste-des-gardes-champetres.html"
-            >Liste des derniers gardes-champêtres de nos 3 villages</a
-          >
-          <a href="./liste-des-lieux-dits.html"
-            >Liste et localisation des lieux-dits pour Ittre, Haut-Ittre et
-            Virginal repris sur la carte Popp de ± 1865</a
-          >
-          <a href="./textes-auteurs-ittrois.html"
-            >Textes en wallon rédigés par nos auteurs locaux</a
-          >
-          <a href="./dictionnaire-ancienne-langue-française.html"
-            >Dictionnaire de l'ancienne langue française</a
-          >
-          <a href="./remerciements.html">Remerciements</a>
-          <a href="./bibliographie.html">Bibliographie</a>
+          <div>
+            <a href="./préface.html">Préface</a>
+          </div>
+          <div>
+            <a href="./comment-lire-le-wallon.html"
+              >Mais comment lire le wallon ?</a
+            >
+          </div>
+          <div>
+            <a href="./abréviations.html">Abréviations</a>
+          </div>
+          <div>
+            <a href="./A.html">Dictionnaire</a>
+          </div>
+          <div>
+            <a href="./grammaire.html">Grammaire wallonne pour Ittre</a>
+          </div>
+          <div>
+            <a href="./conjugaisons.html">Conjugaison</a>
+          </div>
+          <div>
+            <a href="./liste-des-bourgmestres.html"
+              >Liste des bourgmestres de nos 3 villages connus depuis la fin du
+              19<sup>ème</sup> siècle</a
+            >
+          </div>
+          <div>
+            <a href="./liste-des-gardes-champetres.html"
+              >Liste des derniers gardes-champêtres de nos 3 villages</a
+            >
+          </div>
+          <div>
+            <a href="./liste-des-lieux-dits.html"
+              >Liste et localisation des lieux-dits pour Ittre, Haut-Ittre et
+              Virginal repris sur la carte Popp de ± 1865</a
+            >
+          </div>
+          <div>
+            <a href="./textes-auteurs-ittrois.html"
+              >Textes en wallon rédigés par nos auteurs locaux</a
+            >
+          </div>
+          <div>
+            <a href="./dictionnaire-ancienne-langue-française.html"
+              >Dictionnaire de l'ancienne langue française</a
+            >
+          </div>
+          <div>
+            <a href="./remerciements.html">Remerciements</a>
+          </div>
+          <div>
+            <a href="./bibliographie.html">Bibliographie</a>
+          </div>
         </nav>
 
         <p>
