--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <main>
       <div class="container">
-        <h1 style="margin-top: 1rem; margin-bottom: 0">Présentation</h1>
+        <h1 style="margin-top: 1rem; margin-bottom: 1rem">Présentation</h1>
 
         <p>
           Selon l’Unesco, une langue devient véritablement « en danger » quand
@@ -69,7 +69,7 @@
           >
         </p>
 
-        <h1 style="margin-top: 2rem; margin-bottom: 0">Sommaire</h1>
+        <h1 style="margin-top: 2rem; margin-bottom: 1rem">Sommaire</h1>
         <nav class="home-nav">
           <div>
             <a href="./préface.html">Préface</a>
