correction des titres

--- a/remerciements.html
+++ b/remerciements.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       Dictionnaire Français-Wallon pour Ittre, Haut-Ittre, Virginal et environs
-      - Conjugaisons
+      - Remerciements
     </title>
     <link rel="stylesheet" href="style.css" />
   </head>
