--- a/dictionnaire-ancienne-langue-française.html
+++ b/dictionnaire-ancienne-langue-française.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       Dictionnaire Français-Wallon pour Ittre, Haut-Ittre, Virginal et environs
-      - Conjugaisons
+      - Dictionnaire de l'ancienne langue française
     </title>
     <link rel="stylesheet" href="style.css" />
   </head>
