--- a/liste-des-gardes-champetres.html
+++ b/liste-des-gardes-champetres.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       Dictionnaire Français-Wallon pour Ittre, Haut-Ittre, Virginal et environs
-      - Conjugaisons
+      - Liste des gardes-champêtres
     </title>
     <link rel="stylesheet" href="style.css" />
   </head>
