replace special quotes by normal quotes

--- a/K.html
+++ b/K.html
@@ -62,7 +62,7 @@
             <strong>k</strong> dans l'écriture wallonne phonétique,
             <strong>k</strong> remplace souvent le <strong>c</strong> et le
             <strong>qu</strong> (sauf
-            <em lang="wln-BE">qui, que, quand, ‘squ', quote-pârt).</em>
+            <em lang="wln-BE">qui, que, quand, 'squ', quote-pârt).</em>
           </p>
           <p><strong>kaiser</strong>, <em lang="wln-BE">kézêr</em>, n.m.</p>
           <p>
@@ -92,7 +92,7 @@
           </p>
           <p>
             <strong>képi</strong><em lang="wln-BE">, kèpi,</em> n.m.
-            <em lang="wln-BE">Il a pièrdu ‘s kèpi qui s'a involé pau vint</em>.
+            <em lang="wln-BE">Il a pièrdu 's kèpi qui s'a involé pau vint</em>.
           </p>
           <p>
             <strong>kermesse</strong>, <em lang="wln-BE">ducasse</em> ou
@@ -174,7 +174,7 @@
           <p>
             <strong>kodak</strong>, appareil photo,
             <em lang="wln-BE">kodak</em>.
-            <em lang="wln-BE">Pou ‘s comunion, il a rçu in Kodak</em>.
+            <em lang="wln-BE">Pou 's comunion, il a rçu in Kodak</em>.
           </p>
           <p>
             <strong>kot</strong>, <em lang="wln-BE">kot,</em> n.m.
@@ -205,12 +205,12 @@
           <p>
             <strong>kyrielle</strong>,
             <em lang="wln-BE">pèkéye, pèknéye,</em> n.f.
-            <em lang="wln-BE">C'est ‘ne famîye avu ‘ne pèkéye d'èfants</em>.
+            <em lang="wln-BE">C'est 'ne famîye avu 'ne pèkéye d'èfants</em>.
           </p>
           <p>
             <strong>kyste</strong>,
             <em lang="wln-BE">kisse, crèchant</em> (rare) n.m.
-            <em lang="wln-BE">On li z-a èrsaki in kisse à ‘s machwêre</em>.
+            <em lang="wln-BE">On li z-a èrsaki in kisse à 's machwêre</em>.
           </p>
         </section>
       </div>
