--- a/Q.html
+++ b/Q.html
@@ -65,7 +65,7 @@
           </p>
           <p>
             <strong>quadrille</strong>, <em lang="wln-BE">kadrîye,</em> n.m.
-            <em lang="wln-BE">Danser ‘l kadrîye</em>.
+            <em lang="wln-BE">Danser 'l kadrîye</em>.
           </p>
           <p>
             <strong>quadrillé</strong>, <em lang="wln-BE">kadriyé, ye,</em> adj.
@@ -93,7 +93,7 @@
           <p>
             <strong>qualifier</strong><em lang="wln-BE">, kalifyi</em>. Y<em
               lang="wln-BE"
-              >seult s'a kalifié pou ‘l finale du championat d'Europe in 4
+              >seult s'a kalifié pou 'l finale du championat d'Europe in 4
               nâdjes</em
             >. <em lang="wln-BE">Mèdaye dè bronze</em>.
           </p>
@@ -117,7 +117,7 @@
             <strong>quand</strong>, <em lang="wln-BE">quand</em>.
             <em lang="wln-BE"
               >Quand ç- què c'est qu'on s' èrvwèt ? Quand ç-què c'est qu' vos
-              vérez à ‘m mézo ?</em
+              vérez à 'm mézo ?</em
             >
           </p>
           <p>
@@ -128,7 +128,7 @@
           <p>
             <strong>quantième</strong>, <em lang="wln-BE">combi,</em> adv.
             <em lang="wln-BE"
-              >Vos stiz ‘l combi dins ‘l file ? Èl combi astone audjoûrdu ?</em
+              >Vos stiz 'l combi dins 'l file ? Èl combi astone audjoûrdu ?</em
             >
           </p>
           <p>
@@ -315,7 +315,7 @@
             >.
             <em lang="wln-BE"
               >Tîkfwè, dji vouroûs yèsse riche à milions yè avwêr ène masse dè
-              couméres à ‘m cu… ! Kwèkè, final'mint, dj'âroûs branmin trop d'
+              couméres à 'm cu… ! Kwèkè, final'mint, dj'âroûs branmin trop d'
               rûjes avu tout ça</em
             >.
             <em lang="wln-BE"
@@ -332,8 +332,8 @@
           </p>
           <p>
             <strong>quelqu'un</strong><em lang="wln-BE">, ène saki</em>.
-            <em lang="wln-BE">Il a ‘ne saki qu'a tokté à l'uch</em>.
-            <em lang="wln-BE">I s'prind pou ‘ne saki d'râre</em>.
+            <em lang="wln-BE">Il a 'ne saki qu'a tokté à l'uch</em>.
+            <em lang="wln-BE">I s'prind pou 'ne saki d'râre</em>.
           </p>
           <p>
             <strong>quels</strong>, <strong>les</strong>,
@@ -345,7 +345,7 @@
             <strong>quémander</strong
             ><em lang="wln-BE">, proûler, briber, yèsse pindu al sounète</em>.
             <em lang="wln-BE"
-              >Èm' vizin, il est toudi pindu à ‘m sounète pou avwêr mès
+              >Èm' vizin, il est toudi pindu à 'm sounète pou avwêr mès
               ostis</em
             >.
           </p>
@@ -370,17 +370,17 @@
           <p>
             <strong>quenouille</strong
             ><em lang="wln-BE">, kènouye, kènoye,</em> n.f. Rv. Avoir de la
-            fortune : <em lang="wln-BE">avwêr du lin à ‘s kènouye</em>.
+            fortune : <em lang="wln-BE">avwêr du lin à 's kènouye</em>.
           </p>
           <p>
             <strong>querelle</strong>,
             <em lang="wln-BE">chakine, brète,</em> n.f.
-            <em lang="wln-BE">Il a yeû ‘ne brète avu ‘s père</em>.
+            <em lang="wln-BE">Il a yeû 'ne brète avu 's père</em>.
           </p>
           <p>
             <strong>quereller</strong><em lang="wln-BE">, chakiner</em>.
             <em lang="wln-BE"
-              >Dins ‘s famîye-là, is sont toudi à l'ouvrâdje à s' chakiner yun
+              >Dins 's famîye-là, is sont toudi à l'ouvrâdje à s' chakiner yun
               l'aute</em
             >.
           </p>
@@ -396,8 +396,8 @@
           <p>
             <strong>quérir</strong>, aller chercher,
             <em lang="wln-BE">kéri, kér, ké</em>.
-            <em lang="wln-BE">Il èsst'à ‘s mézo, alez ‘l ké</em>.
-            <em lang="wln-BE">Vas-in ‘l kér</em>.
+            <em lang="wln-BE">Il èsst'à 's mézo, alez 'l ké</em>.
+            <em lang="wln-BE">Vas-in 'l kér</em>.
             <em lang="wln-BE">Djè l'ai sti ké</em>.
           </p>
           <p>
@@ -425,7 +425,7 @@
             >. Il en a été question :
             <em lang="wln-BE">on a yeû dû pârler d' ça</em>. Rv. Faire les
             questions et les réponses :
-            <em lang="wln-BE">fé ‘l clér èyè ‘l curé</em>.
+            <em lang="wln-BE">fé 'l clér èyè 'l curé</em>.
           </p>
           <p>
             <strong>questionner</strong><em lang="wln-BE">, kèstioner</em>.
@@ -468,16 +468,16 @@
           <p>
             <strong>queue</strong>, <em lang="wln-BE">keûye, keûwe</em>,
             <em lang="wln-BE">kekeûwe, keûkeûye,</em> n.f.
-            <em lang="wln-BE">On a coûpé ‘l keûwe du tchi</em>.
-            <em lang="wln-BE">Lès pourchas ont ‘ne keûye qui crole</em>. Une
+            <em lang="wln-BE">On a coûpé 'l keûwe du tchi</em>.
+            <em lang="wln-BE">Lès pourchas ont 'ne keûye qui crole</em>. Une
             comète : <em lang="wln-BE">ène èstwèle à keûye</em>.
             <em lang="wln-BE">Ça n'a ni keûye, ni tièsse</em>. A la queue leu
             leu : <em lang="wln-BE">au cu d'yun l'aute</em>.
             <em lang="wln-BE">Ène keûye dè biyâr</em>.
-            <em lang="wln-BE">Fé ‘l keûye au bouchi</em>.
+            <em lang="wln-BE">Fé 'l keûye au bouchi</em>.
             <em lang="wln-BE">Ça a fini in keûye dè pèchon</em>. Faire les
             choses à l'envers :
-            <em lang="wln-BE">brider ‘l tchèvau pal keûye</em>. Petite queue :
+            <em lang="wln-BE">brider 'l tchèvau pal keûye</em>. Petite queue :
             <em lang="wln-BE">ène keuwète</em>. Queue à aiguiser :
             <em lang="wln-BE">ène keû</em>. Pour encourager un sportif à la
             dérive : <em lang="wln-BE">agniz vo keûkeûye !</em>
@@ -501,7 +501,7 @@
           <p>
             <strong>qui</strong>, <em lang="wln-BE">qui, qu'</em>.
             <em lang="wln-BE"
-              >Qui ç-qui va rlaver l'auto ? Vlà ‘ne sakè qui m' plét ! Qui
+              >Qui ç-qui va rlaver l'auto ? Vlà 'ne sakè qui m' plét ! Qui
               astez ? Qui qu' cè fuche/ seûche</em
             >. <em lang="wln-BE">C'est mi qu'a rézo</em>.
           </p>
@@ -509,12 +509,12 @@
             <strong>quia</strong>, <strong>à</strong>,
             <em lang="wln-BE">à broke, à sto, asto</em>.
             <em lang="wln-BE">Il a dmeuré à broke, à sto</em>. Plais.,
-            <em lang="wln-BE">il a yeû ‘s cu stoupé</em> (bouché).
+            <em lang="wln-BE">il a yeû 's cu stoupé</em> (bouché).
           </p>
           <p>
             <strong>quiconque</strong>,
             <em lang="wln-BE">n'impoûrte qui, n'impoûrtè qui</em>.
-            <em lang="wln-BE">N'im-poûrtè qui vos ‘l dîra </em>:
+            <em lang="wln-BE">N'im-poûrtè qui vos 'l dîra </em>:
             <em lang="wln-BE">l'ivièr n'est ni woute</em>.
             <em lang="wln-BE"
               >Tout qui-conque qu'a sti à Nivèle, à d'djà mindji dèl târte al
@@ -530,12 +530,12 @@
             <strong>quignon</strong>,
             <em lang="wln-BE">chikè, tontia, tontcha,</em> n.m.
             <em lang="wln-BE"
-              >Grand-pére s'a skèté in dint in n-agnant dins ‘l tontia</em
+              >Grand-pére s'a skèté in dint in n-agnant dins 'l tontia</em
             >.
           </p>
           <p>
             <strong>quille</strong><em lang="wln-BE">, guîye,</em> n.f.
-            <em lang="wln-BE">Djeûwer ‘ne pârte à guîyes</em>. Abattre 2 quilles
+            <em lang="wln-BE">Djeûwer 'ne pârte à guîyes</em>. Abattre 2 quilles
             en même temps : <em lang="wln-BE">fé in raclot</em>. N'abattre
             aucune quille : <em lang="wln-BE">fé browète</em>. Jeu de 5 quilles
             alignées : <em lang="wln-BE">djeu d' boulwêr</em>. Intervalle entre
@@ -585,7 +585,7 @@
             <em lang="wln-BE"
               >Dj'ai yeû ène kinte ayèr, èm' n-auto a tcheut in pane</em
             >. Jouer une mauvaise farce :
-            <em lang="wln-BE">djeûwer ‘ne kinte à ‘ne saki</em>.
+            <em lang="wln-BE">djeûwer 'ne kinte à 'ne saki</em>.
           </p>
           <p>
             <strong>quintuple</strong>, <strong>au</strong
@@ -596,7 +596,7 @@
               lang="wln-BE"
               >ne,</em
             >
-            n.f. <em lang="wln-BE">Il a bu tout ‘s kinjin</em>.<em lang="wln-BE"
+            n.f. <em lang="wln-BE">Il a bu tout 's kinjin</em>.<em lang="wln-BE"
               >ne</em
             >. <em lang="wln-BE">Ène kinjin</em>.<em lang="wln-BE"
               >ne dè djoûs</em
@@ -610,7 +610,7 @@
             <em lang="wln-BE">Èl kinje du mwès</em>. Rv. Avoir la vie facile :
             <em lang="wln-BE">l'avwêr kinje</em>. A l'adresse de quelqu'un qui
             vient de répliquer du tac au tac :
-            <em lang="wln-BE">kinje à deûs èyè ‘ne chasse !</em>
+            <em lang="wln-BE">kinje à deûs èyè 'ne chasse !</em>
           </p>
           <p><strong>quinzième :</strong> <em lang="wln-BE">kinjième</em>.</p>
           <p>
@@ -646,11 +646,11 @@
           <p>
             <strong>quitter</strong><em lang="wln-BE">, kiter</em>.
             <em lang="wln-BE">Èle nè mè kite ni d'ène sèmèle</em>.
-            <em lang="wln-BE">Èle a kité ‘s n-ome tél'mint qu'i buvoût</em>.
-            Quitter son em-ploi : <em lang="wln-BE">kiter ‘s place</em>. Rv.
+            <em lang="wln-BE">Èle a kité 's n-ome tél'mint qu'i buvoût</em>.
+            Quitter son em-ploi : <em lang="wln-BE">kiter 's place</em>. Rv.
             <em lang="wln-BE">Qui va al cache pièrd ès' place !</em> Répl. Y<em
               lang="wln-BE"
-              >è ‘l cî qui rvît, i cache lès tchis</em
+              >è 'l cî qui rvît, i cache lès tchis</em
             >.
           </p>
           <p>
@@ -681,7 +681,7 @@
           </p>
           <p>
             <strong>quote-part</strong><em lang="wln-BE">, kôte-pârt,</em> n.f.
-            <em lang="wln-BE">Tout ‘l monde dwèt payi ‘s kôte-pârt</em>. On lit
+            <em lang="wln-BE">Tout 'l monde dwèt payi 's kôte-pârt</em>. On lit
             aussi : <em lang="wln-BE">côte-pârt</em>.
           </p>
           <p>
