--- a/U.html
+++ b/U.html
@@ -66,7 +66,7 @@
           <p>
             <strong>ulcère</strong>, <em lang="wln-BE">ulcére, playe,</em> n.m.
             <em lang="wln-BE">Avwêr in n-ulcére à l'ès-toumak</em>.
-            <em lang="wln-BE">Avwêr ène playe à ‘s djambe</em>.
+            <em lang="wln-BE">Avwêr ène playe à 's djambe</em>.
           </p>
           <p>
             <strong>ultérieurement</strong
@@ -79,7 +79,7 @@
           <p>
             <strong>un</strong>, <strong>e</strong><em lang="wln-BE">,</em> art.
             indéf.<em lang="wln-BE">, in, ène</em> ou
-            <em lang="wln-BE">‘ne,</em> adj. num. et pron.,
+            <em lang="wln-BE">'ne,</em> adj. num. et pron.,
             <em lang="wln-BE">yun, yeune</em> ou <em lang="wln-BE">yone</em>.
             <em lang="wln-BE">In bia èfant</em>.
             <em lang="wln-BE">Ène bèle coumére</em>. Y<em lang="wln-BE"
@@ -87,9 +87,9 @@
             >. Y<em lang="wln-BE">un dins l'aute ça dira</em>.
             <em lang="wln-BE"
               >Dj'ai d'ai yeû yone avu li ! I n'a fét ni yone ni deûs</em
-            >. <em lang="wln-BE">C'est ‘ne bèle auto</em>.
+            >. <em lang="wln-BE">C'est 'ne bèle auto</em>.
             <em lang="wln-BE">Is n' vont jamé yun sans l'aute</em>.
-            <em lang="wln-BE">C'est ‘ne bèle djoûrnéye</em>. Note :
+            <em lang="wln-BE">C'est 'ne bèle djoûrnéye</em>. Note :
           </p>
           <p>
             devant voyelle<em lang="wln-BE">, <strong>in</strong></em>
@@ -107,10 +107,10 @@
           <p>
             après préposition ou finale forte,
             <em lang="wln-BE"><strong>ène</strong></em> s'élide en
-            <em lang="wln-BE"><strong>‘ne</strong></em
-            >. <em lang="wln-BE">Dj'ai vu ‘ne bèle coumére</em>.<em
+            <em lang="wln-BE"><strong>'ne</strong></em
+            >. <em lang="wln-BE">Dj'ai vu 'ne bèle coumére</em>.<em
               lang="wln-BE"
-              > Dj'ai mindji ‘ne grosse patake</em
+              > Dj'ai mindji 'ne grosse patake</em
             >.
           </p>
           <p>
@@ -157,12 +157,12 @@
           <p>
             <strong>unique</strong><em lang="wln-BE">, unike,</em> adj.
             <em lang="wln-BE">In n-èfant unike</em>. Plais., pour une fille
-            unique : <em lang="wln-BE">èle a ‘l tchambe yè ‘l boutike</em>.
+            unique : <em lang="wln-BE">èle a 'l tchambe yè 'l boutike</em>.
           </p>
           <p>
             <strong>uniquement</strong>, <em lang="wln-BE">unik'mint,</em> adv.
             <em lang="wln-BE"
-              >Èl bibliyotèke est drouvièrte unik'mint ‘l dimince au matin</em
+              >Èl bibliyotèke est drouvièrte unik'mint 'l dimince au matin</em
             >.
           </p>
           <p>
@@ -171,7 +171,7 @@
           </p>
           <p>
             <strong>unisson</strong><em lang="wln-BE">, unisson, inchène</em>.
-            <em lang="wln-BE">Is ont tchanté ‘l Brabançone tèrtous inchène</em>.
+            <em lang="wln-BE">Is ont tchanté 'l Brabançone tèrtous inchène</em>.
           </p>
           <p><strong>unité</strong><em lang="wln-BE">, unité,</em> n.f.</p>
           <p>
@@ -184,7 +184,7 @@
           <p>
             <strong>universel</strong>, <strong>e</strong>,
             <em lang="wln-BE">univèrsel, e,</em> adj.
-            <em lang="wln-BE">Dins ‘l temps, il avoût in cabarèt à</em> Y<em
+            <em lang="wln-BE">Dins 'l temps, il avoût in cabarèt à</em> Y<em
               lang="wln-BE"
               >ite qui s'apèloût</em
             >
@@ -207,7 +207,7 @@
               tchaude ? Hin ? Hè bî, c'est Mossieu G</em
             >.
             <em lang="wln-BE"
-              >Otèrmie, qu'a sti à scole ‘squ'à 12 ans, à Chaudfontin</em
+              >Otèrmie, qu'a sti à scole 'squ'à 12 ans, à Chaudfontin</em
             >.<em lang="wln-BE">ne</em>.
             <em lang="wln-BE">Là t' tè !</em>
           </p>
@@ -225,7 +225,7 @@
             <strong>uranium</strong><em lang="wln-BE">, uraniom',</em> n.m.
             <em lang="wln-BE"
               >C'èsst'avu l'uraniom' du Congo Bèlche què lès Amérikins ont
-              fabriki ‘l prèmière bombe atomike</em
+              fabriki 'l prèmière bombe atomike</em
             >. <em lang="wln-BE">Mèrci qui ?</em>
           </p>
           <p>
@@ -365,7 +365,7 @@
             <em lang="wln-BE">in d'mi-frére</em>. Une sœur utérine :
             <em lang="wln-BE">ène dèmi-sieûr</em>. Fureur utérine, nymphomanie :
             <em lang="wln-BE"
-              >avwêr èl tchaud-cu, yèsse achîse su ‘ne mèchante bièsse</em
+              >avwêr èl tchaud-cu, yèsse achîse su 'ne mèchante bièsse</em
             >.
           </p>
           <p>
