--- a/W.html
+++ b/W.html
@@ -92,11 +92,11 @@
             <em lang="wln-BE">tchiyote,</em> n.f. Rv. A propos d'un individu
             bizarre, antipathique, mal accoutré :
             <em lang="wln-BE"
-              >èstilâle, vos li mètriz ène pane su ‘s tièsse yè ‘ne</em
+              >èstilâle, vos li mètriz ène pane su 's tièsse yè 'ne</em
             >
             <em lang="wln-BE">gazète</em>
             <em lang="wln-BE"
-              >pa-dzou ‘s bras, i froût ène bèle tchiyote au d'bout du djârdin
+              >pa-dzou 's bras, i froût ène bèle tchiyote au d'bout du djârdin
               !</em
             >
           </p>
@@ -112,7 +112,7 @@
           </p>
           <p>
             <strong>Waudru</strong><em lang="wln-BE">, Vaudru</em>.
-            <em lang="wln-BE">Sinte Vaudru astoût ‘l couzène dè sinte Djèdru</em
+            <em lang="wln-BE">Sinte Vaudru astoût 'l couzène dè sinte Djèdru</em
             >.
           </p>
           <p>
