--- a/Y.html
+++ b/Y.html
@@ -74,7 +74,7 @@
             <em lang="wln-BE">Alez-y !</em> Il y viendra :
             <em lang="wln-BE">i véra ètou</em>. N'y touchez pas :
             <em lang="wln-BE">èn' touchiz ni à ça</em>. Il y a quelqu'un ? :
-            <em lang="wln-BE">il a ‘ne saki ?</em> Quand il n'y en plus, il y en
+            <em lang="wln-BE">il a 'ne saki ?</em> Quand il n'y en plus, il y en
             a encore : <em lang="wln-BE">quand i n'a d'a pus, i d'a co</em>. J'y
             pense : <em lang="wln-BE">dji pinse à ça</em>. Je n'y vois rien :
             <em lang="wln-BE">dji n' vwès rî</em>.
@@ -103,7 +103,7 @@
             <strong>Yser</strong>, Y<em lang="wln-BE">sêr</em>.
             <em lang="wln-BE">Èl bataye dè l'</em> Y<em lang="wln-BE"
               >sêr astoût ène bataye dè frèchaus, is stine tèrtous imbèrnés
-              ‘squ'à leûs dgnoûs</em
+              'squ'à leûs dgnoûs</em
             >.
           </p>
         </section>
