--- a/Z.html
+++ b/Z.html
@@ -84,13 +84,13 @@
             >: <em lang="wln-BE">vos stez in grand zérô</em>. Rv. Répl.
             triviale :
             <em lang="wln-BE"
-              >waye, yè ‘l trô d'vo cu c'èsst'in bia zérô ètou</em
+              >waye, yè 'l trô d'vo cu c'èsst'in bia zérô ètou</em
             >.
           </p>
           <p>
             <strong>zest</strong><em lang="wln-BE">, zès'</em>, n.m. Rv. Être
             entre deux chaises, hésiter :
-            <em lang="wln-BE">yèsse intrè ‘l zis' èyè ‘l zès'</em>.
+            <em lang="wln-BE">yèsse intrè 'l zis' èyè 'l zès'</em>.
           </p>
           <p>
             <strong>zeste</strong><em lang="wln-BE">, pèlate d'oranje</em> ou
@@ -150,7 +150,7 @@
           </p>
           <p>
             <strong>zizanie</strong>, <em lang="wln-BE">sizanîye</em>, n.f.
-            <em lang="wln-BE">I sème èl sizanîye, i fout ‘l brin</em>. Pour
+            <em lang="wln-BE">I sème èl sizanîye, i fout 'l brin</em>. Pour
             quelqu'un qui aime semer la zizanie :
             <em lang="wln-BE">in fouteû d' brin.</em>
           </p>
@@ -168,12 +168,12 @@
             <em lang="wln-BE">Nos daline tîkfwè au djârdin zolojike d'Anvers</em
             >.
             <em lang="wln-BE"
-              >Co ‘ne miyète, is nos rinsèrine avu lès sindjes</em
+              >Co 'ne miyète, is nos rinsèrine avu lès sindjes</em
             >.
           </p>
           <p>
             <strong>zouave</strong>, <em lang="wln-BE">zouwâfe, zwâfe,</em> n.m.
-            <em lang="wln-BE">Arètez d' fé ‘l zwâfe !</em>
+            <em lang="wln-BE">Arètez d' fé 'l zwâfe !</em>
           </p>
           <p>
             <strong>zoulou</strong><em lang="wln-BE">,</em> un avare<em
@@ -184,7 +184,7 @@
           <p><strong>zut</strong><em lang="wln-BE">, zut', flut'</em>.</p>
           <p>
             <strong>zwanze</strong><em lang="wln-BE">, zwanze</em>.
-            <em lang="wln-BE">I zwanze avu tout, yè avu tout ‘l monde</em>. Un
+            <em lang="wln-BE">I zwanze avu tout, yè avu tout 'l monde</em>. Un
             pince-sans-rire :
             <em lang="wln-BE"
               >in zwanzeû à frwèd, in rousse, in Djan-sins-rîre</em
