--- a/comment-lire-le-wallon.html
+++ b/comment-lire-le-wallon.html
@@ -78,11 +78,11 @@
             Les «<em lang="wln-BE"> qu </em>» deviennent «<em lang="wln-BE"
               > k </em
             >» sauf
-            <em lang="wln-BE">qui, què, quand, djusque, djusqu' à, ‘squ'</em>. «
+            <em lang="wln-BE">qui, què, quand, djusque, djusqu' à, 'squ'</em>. «
             <em lang="wln-BE">Èl keûye du tcha</em>». «
             <em lang="wln-BE">In kârt d'eûre</em> ». «
             <em lang="wln-BE">Dji boute kazimint djusqu' à chinke eûres</em> »
-            ou « <em lang="wln-BE">‘squ'à chinke eûres</em> ».
+            ou « <em lang="wln-BE">'squ'à chinke eûres</em> ».
           </p>
           <p>
             Avec l'auxiliaire « avoir », les participes passés restent
@@ -329,7 +329,7 @@
           <p>
             Sauf exception, un
             <strong><em lang="wln-BE">si</em></strong> entraîne toujours un
-            conditionnel : « <em lang="wln-BE">si ‘l Dodin</em>.<em
+            conditionnel : « <em lang="wln-BE">si 'l Dodin</em>.<em
               lang="wln-BE"
               >ne dèsboûrdroût, tout Nivèle pèriroût</em
             >
