--- a/conjugaisons.html
+++ b/conjugaisons.html
@@ -281,7 +281,7 @@
             <div class="conjugaison-temps">
               <p>Présent</p>
               <p><em lang="wln-BE">què dj'uche</em></p>
-              <p><em lang="wln-BE">qu‘il, èle uche</em></p>
+              <p><em lang="wln-BE">qu'il, èle uche</em></p>
               <p><em lang="wln-BE">què nos uchions</em></p>
               <p><em lang="wln-BE">ou uche/uchène</em></p>
               <p><em lang="wln-BE">què vos uchiz</em></p>
@@ -644,7 +644,7 @@
               <p>Présent</p>
               <p>
                 <em lang="wln-BE">èstant</em> ou
-                <em lang="wln-BE">‘stant</em>
+                <em lang="wln-BE">'stant</em>
               </p>
             </div>
             <div class="conjugaison-temps">
