--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           (la bêche du fossoyeur),
           <em lang="wln-BE"
             >il èsst’ al dèrnière…, yè co d’ z-autes èsprèssions qu’ vos
-            trouvrez dins ‘s dicsionère-ci.</em
+            trouvrez dins 's dicsionère-ci.</em
           >
         </p>
         <p>
