--- a/liste-des-lieux-dits.html
+++ b/liste-des-lieux-dits.html
@@ -2346,7 +2346,7 @@
             </p>
             <p>
               <strong>Longe Haie :</strong> à gauche de la partie basse de la
-              rue de Samme, derrière l ‘ Etable d' Hôte
+              rue de Samme, derrière l ' Etable d' Hôte
             </p>
             <p>
               <strong>Monplaisir :</strong> à droite en descendant la rue
