--- a/remerciements.html
+++ b/remerciements.html
@@ -104,7 +104,7 @@
               >ne</em
             >.
             <em lang="wln-BE"
-              >Si vos passez dins ‘m rûwe yè qu'il a dèl lampe à ‘m mézo,
+              >Si vos passez dins 'm rûwe yè qu'il a dèl lampe à 'm mézo,
               rintrez yè assijiz-vous, il a du frèche qui vos ratind su
               l'èstûve</em
             >.
