--- a/J.html
+++ b/J.html
@@ -96,7 +96,7 @@
             <strong>jacinthe</strong> sauvage,
             <em lang="wln-BE">Clé d' bo, bleû godè</em>.
             <em lang="wln-BE"
-              >Quand c'est ‘l moumint, au bo d' Hal, i fét tout bleû à cause dès
+              >Quand c'est 'l moumint, au bo d' Hal, i fét tout bleû à cause dès
               clés d' bo</em
             >.
             <em lang="wln-BE"
@@ -124,17 +124,17 @@
             <em lang="wln-BE">djakè, bac,</em> n.m.
           </p>
           <p>
-            <strong>jadis</strong>, <em lang="wln-BE">dins ‘l timps</em>.
+            <strong>jadis</strong>, <em lang="wln-BE">dins 'l timps</em>.
             <em lang="wln-BE"
-              >Dins ‘l timps, on avoût dèl nîve tous lès iviêrs</em
-            >. On entend aussi : <em lang="wln-BE">dins ‘l temps</em>.
+              >Dins 'l timps, on avoût dèl nîve tous lès iviêrs</em
+            >. On entend aussi : <em lang="wln-BE">dins 'l temps</em>.
           </p>
           <p>
             <strong>jaillir</strong>,
             <em lang="wln-BE">brotchi, (è)spiter, (è)spritchi</em>.
             <em lang="wln-BE">Ça m'a spité woûr d'èm bouche</em>.
             <em lang="wln-BE">L'eûye spite pa lès traus d' l' arozwêr</em>.
-            <em lang="wln-BE">Fé spritchi ‘l djârnon d'in clô</em>.
+            <em lang="wln-BE">Fé spritchi 'l djârnon d'in clô</em>.
           </p>
           <p>
             <strong>jais</strong><em lang="wln-BE">, jé,</em> n.m.
@@ -146,7 +146,7 @@
               >, jèlape</em
             >.
             <em lang="wln-BE"
-              >On li z-a mis du jèlape dins ‘s cafè pou li fé ‘ne fârce</em
+              >On li z-a mis du jèlape dins 's cafè pou li fé 'ne fârce</em
             >. <em lang="wln-BE">I n'a ni ri avu ça </em>:
             <em lang="wln-BE">il a couru t'au long du nûte</em>.
           </p>
@@ -164,7 +164,7 @@
             <strong>jalousement</strong
             ><em lang="wln-BE">, djalousemint, djalouz'mint,</em> adv.
             <em lang="wln-BE"
-              >I survèye toudi djalouz'mint ‘s feume quand èle va fé sès
+              >I survèye toudi djalouz'mint 's feume quand èle va fé sès
               comissions</em
             >.
           </p>
@@ -181,20 +181,20 @@
           <p>
             <strong>jaloux</strong>,
             <em lang="wln-BE">djalou, djalousse,</em> adj. et n.
-            <em lang="wln-BE">Èle est foûrt djalousse après ‘s n-ome</em>. Rv.
+            <em lang="wln-BE">Èle est foûrt djalousse après 's n-ome</em>. Rv.
             <em lang="wln-BE">Èle est djalousse come ène fumèle dè sindje</em>.
             <em lang="wln-BE"
               >Èl tchi qui n'est ni djalou d'ès' n-oche, c'èsst'ène rosse !</em
             >
-            Être jaloux : <em lang="wln-BE">avwêr mau ‘s vinte</em>.
+            Être jaloux : <em lang="wln-BE">avwêr mau 's vinte</em>.
             <em lang="wln-BE"
-              >Il a yeû mau ‘s vinte quand il a vu èm' nieufe auto</em
+              >Il a yeû mau 's vinte quand il a vu èm' nieufe auto</em
             >.
           </p>
           <p>
             <strong>jamais</strong>, <em lang="wln-BE">jamé, maye</em> (rare).
             <em lang="wln-BE"
-              >Si jamé vos pâssez dins ‘m rûwe, buskiz à ‘m n-uch</em
+              >Si jamé vos pâssez dins 'm rûwe, buskiz à 'm n-uch</em
             >.
             <em lang="wln-BE">Dji n'âroûs jamé sondji qu'il âroût gangni</em>.
             Rv. <em lang="wln-BE">Jamé, c'èsst' in long djoû</em>.
@@ -205,7 +205,7 @@
           </p>
           <p>
             <strong>jambe</strong><em lang="wln-BE">, djambe,</em> n.f.
-            <em lang="wln-BE">Avwêr mau ‘s djambe</em>.
+            <em lang="wln-BE">Avwêr mau 's djambe</em>.
             <em lang="wln-BE">Avwêr ène djambe dè bo</em>. Prendre ses jambes à
             son cou : <em lang="wln-BE">prinde sès djambes à spales</em> ou
             <em lang="wln-BE">prinde ès' cu à pougnéyes</em>. Avoir des jambes
@@ -326,7 +326,7 @@
           <p><strong>jars</strong>, <em lang="wln-BE">in mâle d'wè</em>.</p>
           <p>
             <strong>jaser</strong><em lang="wln-BE">, djâser</em>.
-            <em lang="wln-BE">Ça djâse dins ‘l vilâdje </em>:
+            <em lang="wln-BE">Ça djâse dins 'l vilâdje </em>:
             <em lang="wln-BE"
               >i parèt qu'èl curé va yèsse nomé dwèyin à Tubisse</em
             >.
@@ -395,7 +395,7 @@
             <strong>jaunissage</strong
             ><em lang="wln-BE">, djaunichâdje,</em> n.m.
             <em lang="wln-BE"
-              >Èl djaunichâdje du bûre n'est ni ‘l minme au bon temps qu'in
+              >Èl djaunichâdje du bûre n'est ni 'l minme au bon temps qu'in
               n-iviêr</em
             >.
           </p>
@@ -451,12 +451,12 @@
             <em lang="wln-BE">d', dè, dj', dje, dji, djè</em>.
             <em lang="wln-BE">Waye, vos dis-dje ! Dji m'invas</em>.
             <em lang="wln-BE">Djè va stièrni</em>.
-            <em lang="wln-BE">D'arife ! Dj'oûzroûs ‘l fé</em>.
+            <em lang="wln-BE">D'arife ! Dj'oûzroûs 'l fé</em>.
           </p>
           <p>
             <strong>Jean</strong><em lang="wln-BE">, Djan, Djan-Djan</em>. Pour
             un épouvantail placé par dérision dans un champ tardant à être
-            moissonné : <em lang="wln-BE">in Djan ‘l nôji</em> (fatigué).
+            moissonné : <em lang="wln-BE">in Djan 'l nôji</em> (fatigué).
           </p>
           <p>
             <strong>Jean-Baptiste</strong>,
@@ -504,15 +504,15 @@
             <em lang="wln-BE">Èl pètit Jézu</em>.
             <em lang="wln-BE">Jézu, Marîye, Jozef !</em> Rv.
             <em lang="wln-BE"
-              >Ça sint t'aussi bon qu' si ‘l pètit Jézu lach'roût ‘ne vèsse dins
+              >Ça sint t'aussi bon qu' si 'l pètit Jézu lach'roût 'ne vèsse dins
               vo nez ! Du pipi pètit Jézu</em
             >
             ou
             <em lang="wln-BE"
-              >c'est du pipi du ptit Jézu dins ‘ne marone dè vloûrs</em
+              >c'est du pipi du ptit Jézu dins 'ne marone dè vloûrs</em
             >
             : pour une très bonne boisson.
-            <em lang="wln-BE">Mète èl pètit Jézu dins ‘l crèche </em>: coïter.
+            <em lang="wln-BE">Mète èl pètit Jézu dins 'l crèche </em>: coïter.
           </p>
           <p>
             <strong>jet</strong>, <em lang="wln-BE">djèt, jèt</em>, n.m.
@@ -545,18 +545,18 @@
             <em lang="wln-BE"
               >I d'a qui frine dèl politike ri qu' pou touchi dès jètons d'
               présince</em
-            >. <em lang="wln-BE">Foute in j'ton à ‘ne saki</em>.
+            >. <em lang="wln-BE">Foute in j'ton à 'ne saki</em>.
           </p>
           <p>
             <strong>jeu</strong>, <em lang="wln-BE">djeu,</em> n.m.
             <em lang="wln-BE">Ké djeu dwéci !</em> : quel bazar !
             <em lang="wln-BE">In djeu d' cârtes, dè biyâr, dè guîyes</em>. Être
-            à son affaire : <em lang="wln-BE">yèsse à ‘s djeu</em>. Coïter :
-            <em lang="wln-BE">fé ‘l djeu</em>. Il a bien conduit son affaire, il
+            à son affaire : <em lang="wln-BE">yèsse à 's djeu</em>. Coïter :
+            <em lang="wln-BE">fé 'l djeu</em>. Il a bien conduit son affaire, il
             a bien manoeuvré : <em lang="wln-BE">il a bî min</em>.<em
               lang="wln-BE"
-              >né ‘s djeu</em
-            >. <em lang="wln-BE">Muchi ‘s djeu</em>.
+              >né 's djeu</em
+            >. <em lang="wln-BE">Muchi 's djeu</em>.
             <em lang="wln-BE">Daler au djeu d' bale</em>.
             <em lang="wln-BE">Djeu d' main, djeu d' vilain</em>. Rv.
             <em lang="wln-BE">Chériye, dj'ai du djeu ! </em>: je bande.
@@ -564,14 +564,14 @@
           <p>
             <strong>jeudi</strong>, <em lang="wln-BE">djeudi</em>, n.m.
             <em lang="wln-BE"
-              >Dins ‘l temps, à scole, on avoût condji tous lès djeudis, mins ni
-              ‘l sèm'di</em
+              >Dins 'l temps, à scole, on avoût condji tous lès djeudis, mins ni
+              'l sèm'di</em
             >.
             <em lang="wln-BE"
               >C'èsst'in 1958 qu'on a yeû condji lès après-din</em
             >.<em lang="wln-BE">ners dès mèrcrèdis yè dès sèm'dis</em>. Rv.
             <em lang="wln-BE">On ratindra èl sèmin</em>.<em lang="wln-BE"
-              >ne dès kate djeudis pou ‘l fé </em
+              >ne dès kate djeudis pou 'l fé </em
             >: on remet aux calendes grecques. Note : il s'agirait du premier
             jeudi, à la fois du millénaire, du siècle, de l'année, du mois.
           </p>
@@ -583,7 +583,7 @@
           <p>
             <strong>jeune</strong><em lang="wln-BE">,</em> adj.
             <em lang="wln-BE">djoûne, djon</em>.<em lang="wln-BE">ne</em>.
-            <em lang="wln-BE">Il a co l'ér djoûne pou ‘s n-âdje</em>. Plais. :
+            <em lang="wln-BE">Il a co l'ér djoûne pou 's n-âdje</em>. Plais. :
             <em lang="wln-BE">il est co djoûne, i tchit co dès danisses</em>
             (bonbon à l'anis).
             <em lang="wln-BE">No tcha a yeû sès djoûnes</em> : a mis bas. Rv.
@@ -655,7 +655,7 @@
           </p>
           <p>
             <strong>joie</strong><em lang="wln-BE">, jwè, jwèy', djwè,</em> n.f.
-            <em lang="wln-BE">Moustrer ‘s jwè</em>.
+            <em lang="wln-BE">Moustrer 's jwè</em>.
             <em lang="wln-BE">Brére dè jwè</em>.
           </p>
           <p>
@@ -708,7 +708,7 @@
           <p>
             <strong>joli</strong>, <strong>e</strong
             ><em lang="wln-BE">, djoli, îye,</em> adj.
-            <em lang="wln-BE">I fét toudi ‘l djoli pa-d'vant lès coumères</em>.
+            <em lang="wln-BE">I fét toudi 'l djoli pa-d'vant lès coumères</em>.
             <em lang="wln-BE">Hè bî, c'est du djoli !</em> (quand ça ne l'est
             pas !, antiphrase).
           </p>
@@ -749,14 +749,14 @@
             <em lang="wln-BE">ène djaune pupe</em>.
             <em lang="wln-BE"
               >On daloût coud' lès tchambouréyes au long du tch'min du Sart,
-              dins ‘l bo d' Ite</em
+              dins 'l bo d' Ite</em
             >.
           </p>
           <p>
             <strong>Joseph</strong
             ><em lang="wln-BE">, Jozèf, Djozèf, Djo, Zè</em>.
             <em lang="wln-BE"
-              >Sint Djozèf c'est ‘l patron dès mènuziés, dès tcharpintis, dès
+              >Sint Djozèf c'est 'l patron dès mènuziés, dès tcharpintis, dès
               tchârlis, dès èbènisses, yè d' tous lès cis qu'ont yeû in gamin
               qui n'èst ni d'à yeûs'</em
             >.
@@ -784,7 +784,7 @@
           <p>
             <strong>joubarbe</strong>, <em lang="wln-BE">djubarbe,</em> n.f.
             <em lang="wln-BE"
-              >Dins ‘l temps, on mètoût ène djubarbe sul twèt pou impétchi
+              >Dins 'l temps, on mètoût ène djubarbe sul twèt pou impétchi
               l'orâdje dè tchér dèssu</em
             >.
           </p>
@@ -806,7 +806,7 @@
             <em lang="wln-BE"
               >Djeûwer à mèles, au p'tit fièr, à cârtes, du piyano</em
             >. Terme technique : <em lang="wln-BE">èl manse djeuwe</em>.
-            <em lang="wln-BE">Il a du djeu dins ‘l roûwe</em>. Se moquer
+            <em lang="wln-BE">Il a du djeu dins 'l roûwe</em>. Se moquer
             gentiment : <em lang="wln-BE">djeûwer avu lès pîds</em>. Se moquer
             avec défi : <em lang="wln-BE">djeûwer avu</em>. Jouer un mauvais
             tour : <em lang="wln-BE">djeûwer ène kinte, ène crasse</em>.
@@ -817,7 +817,7 @@
             <em lang="wln-BE"
               >Pou leû Sint-Nicolas, lès èfants dèmande ène masse dès
               djouwèts</em
-            >. <em lang="wln-BE">Dj' ai sintu qu' dj'astoûs ‘s djeuwèt</em>.
+            >. <em lang="wln-BE">Dj' ai sintu qu' dj'astoûs 's djeuwèt</em>.
           </p>
           <p>
             <strong>jouette</strong><em lang="wln-BE">, djeûwète,</em> adj. et
@@ -884,7 +884,7 @@
             <em lang="wln-BE">Lès djoûs sè sûve mins nè s'èrchène ni</em>. Vivre
             au jour le jour : <em lang="wln-BE">vîfe au jour le jour</em> (pas
             de tournure wallonne connue).
-            <em lang="wln-BE">On n'a ni fét ‘l monde in n-in djoû</em>.
+            <em lang="wln-BE">On n'a ni fét 'l monde in n-in djoû</em>.
             <em lang="wln-BE">Rv</em>. Pour un jour imaginaire, qui n'arrivera
             jamais :
             <em lang="wln-BE">èl djoû dèl fwêre aux boutons d' brayète</em> ou
@@ -927,11 +927,11 @@
           <p>
             <strong>journée</strong>, <em lang="wln-BE">djoûrnéye,</em> n.f.
             <em lang="wln-BE">Ène</em> <em lang="wln-BE">bèle djoûrnéye</em>.
-            <em lang="wln-BE">Gangni ‘s djoûrnéye</em>.
+            <em lang="wln-BE">Gangni 's djoûrnéye</em>.
             <em lang="wln-BE">Ène feume à djoûrnéye</em>.
             <em lang="wln-BE"
-              >Quand il a fini ‘s djournéye à l'usine, i d'in rcouminche yone in
-              travayant dins lès cinses, ‘squ'au nût'</em
+              >Quand il a fini 's djournéye à l'usine, i d'in rcouminche yone in
+              travayant dins lès cinses, 'squ'au nût'</em
             >. Rv.
             <em lang="wln-BE"
               >I n' faut jamé s' vanter d'ène bèle djoûrnéye tant qu'èle n'est
@@ -954,13 +954,13 @@
             <em lang="wln-BE">pârer</em>.
             <em lang="wln-BE"
               >Après qu'on a coudu lès puns, i faut lès lèyi pârer sacans djoûs
-              dins ‘l câve ou bî dins ‘l cûjène</em
+              dins 'l câve ou bî dins 'l cûjène</em
             >.
           </p>
           <p>
             <strong>jouvenceau</strong>,
             <em lang="wln-BE">djoûnia, gavio,</em> n.m.
-            <em lang="wln-BE">Maugré ‘s n-âdje, i djeûwe co au djoûnia</em>.
+            <em lang="wln-BE">Maugré 's n-âdje, i djeûwe co au djoûnia</em>.
           </p>
           <p>
             <strong>jouvencelle</strong>,
@@ -1005,7 +1005,7 @@
           <p><strong>jubilé</strong>, <em lang="wln-BE">jubilé,</em> n.m.</p>
           <p>
             <strong>jubiler</strong>, <em lang="wln-BE">jubiler</em>. Rv.
-            <em lang="wln-BE">Tèni ‘l bon Dieu pal bârbe</em>.
+            <em lang="wln-BE">Tèni 'l bon Dieu pal bârbe</em>.
             <em lang="wln-BE"
               >C'est quand leû n'èkipe dè fout'bal gangne conte les Francès ou
               bi lès Olandais que lès Bèljes jubile èl pus</em
@@ -1144,7 +1144,7 @@
           <p>
             <strong>jupe</strong>, <em lang="wln-BE">cote,</em> n.f.
             <em lang="wln-BE"
-              >Pou n' ni l'èspliter, èle a rlèvé ‘s cote pou passer dins
+              >Pou n' ni l'èspliter, èle a rlèvé 's cote pou passer dins
               l'eûye</em
             >.
           </p>
@@ -1200,7 +1200,7 @@
           <p>
             <strong>jury</strong>, <em lang="wln-BE">juri,</em> n.m.
             <em lang="wln-BE"
-              >Il a yeû ‘s diplôme avu lès complumints du juri</em
+              >Il a yeû 's diplôme avu lès complumints du juri</em
             >.
           </p>
           <p>
@@ -1211,8 +1211,8 @@
           <p>
             <strong>jusque</strong
             ><em lang="wln-BE"
-              >, djuskè, djusk', dusk', ‘squ', tant qu'asteûr</em
-            >. <em lang="wln-BE">‘Squ' à dmin</em>.
+              >, djuskè, djusk', dusk', 'squ', tant qu'asteûr</em
+            >. <em lang="wln-BE">'Squ' à dmin</em>.
             <em lang="wln-BE">Djusk'asteûr, tout va bî</em>.
             <em lang="wln-BE">Squ'à taleûr</em>.
             <em lang="wln-BE">Djusk'adon</em>.
@@ -1222,7 +1222,7 @@
               Lîdje</em
             >.
             <em lang="wln-BE">Vos avez djusk'au 30 décimbe pou fé vo dmande</em
-            >. Rv. <em lang="wln-BE">Alez, ‘squ'à là, lès coumarâdes </em>: à
+            >. Rv. <em lang="wln-BE">Alez, 'squ'à là, lès coumarâdes </em>: à
             plus târd !
           </p>
           <p>
@@ -1233,16 +1233,16 @@
             d'esprit, un cinglé, un fou. Juste à temps :
             <em lang="wln-BE">à scape</em>. Rv.
             <em lang="wln-BE"
-              >Dins ‘s monde-ci, i n'a qu' deûs afêres djusses </em
+              >Dins 's monde-ci, i n'a qu' deûs afêres djusses </em
             >:
             <em lang="wln-BE"
-              >tout ‘l monde vît d'in trô pou s'indaler dins in aute trô</em
+              >tout 'l monde vît d'in trô pou s'indaler dins in aute trô</em
             >. Rv. Ça ira, mais tout juste<em lang="wln-BE"> </em>:
             <em lang="wln-BE">c'est ric et rac !</em>
           </p>
           <p>
             <strong>justement</strong>, <em lang="wln-BE">djustèmint,</em> adv.
-            <em lang="wln-BE">Djustèmint, djè daloûs vos ‘l dîre !</em>
+            <em lang="wln-BE">Djustèmint, djè daloûs vos 'l dîre !</em>
           </p>
           <p>
             <strong>justice</strong><em lang="wln-BE">, djustice,</em> n.f.
@@ -1265,7 +1265,7 @@
           </p>
           <p>
             <strong>juter</strong>, <em lang="wln-BE">djuter</em>.
-            <em lang="wln-BE">Après ‘l pieufe, lès ârbes djute</em>.
+            <em lang="wln-BE">Après 'l pieufe, lès ârbes djute</em>.
           </p>
           <p>
             <strong>juteux</strong>, <strong>euse</strong
