--- a/index.html
+++ b/index.html
@@ -50,10 +50,13 @@
           Voilà 20 ans que Jean-Marie Gervy et les
           <a href="./remerciements.html">Vîs Paltots</a>, derniers locuteurs
           wallons de l’entité ittroise, travaillent à sauvegarder le parler
-          wallo-picard local. Cet ouvrage fait suite au dictionnaire Wallon -
-          Français déjà paru et vous aidera à retrouver un mot wallon oublié,
-          voire ignoré. Nos passionnés vont vous faire partager leur
-          enthousiasme, <em lang="wln-BE">pèrcés sots du walon qu’is sont !</em>
+          wallo-picard local. Cet ouvrage fait suite au
+          <a href="https://gervye.github.io/dico_wallon_francais_ittre/"
+            >dictionnaire Wallon - Français</a
+          >
+          déjà paru et vous aidera à retrouver un mot wallon oublié, voire
+          ignoré. Nos passionnés vont vous faire partager leur enthousiasme,
+          <em lang="wln-BE">pèrcés sots du walon qu’is sont !</em>
         </p>
         <p>
           <em lang="wln-BE"
